# skein

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_TEST.txt  Dockerfile  Dockerfile.cli  FIX_TEST.txt  LICENSE  Makefile  README.md  TEST_TENDER_CLOSEOUT.md  VERIFICATION_TEST.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  skein-dev  skein_server.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
.hypothesis/constants/: 0bd88a5ee46b8aab  6da3611b8c25b1e0
client/: __init__.py  analytics.py  backup.py  cli.py
config/: README.md  config.example.json
docs/: SHARD_AGENT_GUIDE.md  SKEIN_AGENT_GUIDE.md  SKEIN_API_GUIDE.md  SKEIN_CONTEXT_ENRICHMENT.md  SKEIN_QUICK_START.md
skein/: README.md  __init__.py  models.py  routes.py  shard.py  storage.py  utils.py  words.py
skein/templates/: CLAUDE.md
skein/web/: __init__.py  app.py
skein/web/templates/: activity.html  base.html  folio_detail.html  home.html  roster.html  site_detail.html  sites.html
skein/web/templates/partials/: folio_list.html  site_list.html
systemd/: skein-backup.service.template  skein-backup.timer.template  skein.service.template
tests/: __init__.py  conftest.py  test_agent_id.py  test_analytics.py  test_cli_validation.py  test_sacks.py  test_shard.py  test_skein.py
tests/fixtures/: __init__.py
